testdata/baselines/reference/compiler/isolatedDeclarationsArrowFunctionDefaultParameter.errors.txt
isolatedDeclarationsArrowFunctionDefaultParameter.ts(1,21): error TS9025: Declaration emit for this parameter requires implicitly adding undefined to its type. This is not supported with --isolatedDeclarations.
isolatedDeclarationsArrowFunctionDefaultParameter.ts(5,21): error TS9013: Expression type can't be inferred with --isolatedDeclarations.


==== isolatedDeclarationsArrowFunctionDefaultParameter.ts (2 errors) ====
    export const foo = (one: string = "DEFAULT", two: string): string => {
                        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9025: Declaration emit for this parameter requires implicitly adding undefined to its type. This is not supported with --isolatedDeclarations.
!!! related TS9028 isolatedDeclarationsArrowFunctionDefaultParameter.ts:1:21: Add a type annotation to the parameter one.
        return one + " " + two;
    };
    
    export const bar = (one: string | undefined = "DEFAULT", two: string): string => {
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9028 isolatedDeclarationsArrowFunctionDefaultParameter.ts:5:21: Add a type annotation to the parameter one.
!!! related TS9035 isolatedDeclarationsArrowFunctionDefaultParameter.ts:5:21: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        return one + " " + two;
    };
    
    // Arrow function where the default parameter is the last one (should be optional)
    export const baz = (one: string, two: string | undefined = "DEFAULT"): string => {
        return one + " " + two;
    };
    
    // Arrow function where all parameters have defaults
    export const qux = (one: string = "DEFAULT", two: string = "DEFAULT"): string => {
        return one + " " + two;
    };
    